# garth-mcp-server

./: .gitignore  README.md  pyproject.toml
src/garth_mcp_server/: auth.py
