[project]
name = "garth-mcp-server"
dynamic = ["version"]
description = "Garmin Connect MCP server"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Matin Tamizi", email = "mtamizi@duck.com"},
]
dependencies = [
    "garth>=0.5.14,<0.6.0",
    "mcp>=1.9.0,<2.0.0",
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
keywords = ["garmin", "garmin connect", "mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/garth_mcp_server/__init__.py"

[project.scripts]
garth-mcp-server = "garth_mcp_server:main"
garth-mcp-auth = "garth_mcp_server.auth:main"

[project.optional-dependencies]
dev = [
    "ipython",
    "ipdb",
    "ipykernel",
    "mcp[cli]",
]
linting = [
    "ruff",
    "mypy",
    "types-requests",
]
